fixed section heading spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,11 @@ footer a {
     font-size: 18px;
     line-height: 1.3;
     margin: 5px 25px 5px 25px;
-    width: 50%
+}
+
+.vert {
+    font-size: 25px;
+    font-style: bold;
 }
 
 .hero h2 {
@@ -79,6 +83,10 @@ footer a {
 .hero-text ul {
     text-decoration: none;
     list-style-type: none;
+}
+
+.hero-text ul li {
+    display: inline-block;
 }
 
 .hero-img img {
@@ -96,12 +104,16 @@ footer a {
 }
 
 .about h3 {
-    width: 20%;
+    width: 10%;
+    margin-right: 50px;
+    padding-right: 25px;
+    text-align: right;
 }
 
 .about p {
     text-align: left;
     width: 80%;
+    margin-right: 55px;
 }
 
 /*projects*/
@@ -110,10 +122,14 @@ footer a {
     display: flex;
     align-items: center;
     height: auto;
+    justify-content: space-between;
 }
 
 .work h3 {
-    width: 20%;
+    width: 10%;
+    margin-right: 50px;
+    padding-right: 25px;
+    text-align: right;
 }
 
 /*replace this with CSS idenfier specifically for first project div*/
@@ -122,8 +138,8 @@ footer a {
 }
 
 .projects {
-    width: 100%;
-    margin: 0 auto;
+    width: 80%;
+    margin: 20px 55px 20px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -137,10 +153,6 @@ footer a {
 }
 
 /*contact*/
-.contact h3 {
-    width: 20%;
-}
-
 .contact {
     display: flex;
     flex-wrap: wrap;
@@ -148,6 +160,18 @@ footer a {
     align-items: center;
     height: 100px;
     justify-content: space-between;
+}
+
+.contact h3 {
+    width: 10%;
+    margin-right: 50px;
+    padding-right: 25px;
+    text-align: right;
+}
+
+.contact-list {
+    width: 80%;
+    text-align: right;
 }
 
 .contact ul li {
